base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fernet-solver
  name: fernet-solver
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fernet-solver
